# observability-engineering-series

./: .gitignore  LICENSE  README.md
chapters/ch1-structured-logging/: README.md  final.py  initial.py  pyproject.toml
chapters/ch10-dashboards/: Makefile  README.md  api_gateway.py  docker-compose.yml  logging_setup.py  order_service.py  otel-collector-config.yaml  prometheus.yml  pyproject.toml
chapters/ch10-dashboards/grafana/provisioning/dashboards/: dashboards.yaml  red-dashboard.json
chapters/ch10-dashboards/grafana/provisioning/datasources/: datasources.yaml
chapters/ch11-alerting-slos/: Makefile  README.md  api_gateway.py  docker-compose.yml  logging_setup.py  order_service.py  otel-collector-config.yaml  prometheus-alert-rules.yml  prometheus.yml  pyproject.toml  simulate_errors.py  test_alerts.yaml
chapters/ch11-alerting-slos/grafana/provisioning/alerting/: alerts.yaml  contactpoints.yaml  policies.yaml
chapters/ch11-alerting-slos/grafana/provisioning/dashboards/: dashboards.yaml  red-dashboard.json
chapters/ch11-alerting-slos/grafana/provisioning/datasources/: datasources.yaml
chapters/ch2-context-propagation/: README.md  final.py  initial.py  pyproject.toml
chapters/ch3-opentelemetry/: 01_zero_code.py  02_medium_code.py  03_custom_code.py  Makefile  README.md  pyproject.toml
chapters/ch4-distributed-tracing/: Makefile  README.md  api_gateway.py  api_gateway_manual.py  docker-compose.yml  order_service.py  order_service_custom.py  order_service_manual.py  pyproject.toml
chapters/ch4-distributed-tracing/tests/: test_api_gateway_manual.py  test_order_service_manual.py
chapters/ch5-metrics/: Makefile  README.md  api_gateway.py  docker-compose.yml  order_service.py  prometheus.yml  pyproject.toml
chapters/ch6-three-pillars/: .env.example  Makefile  README.md  api_gateway.py  logging_setup.py  order_service.py  pyproject.toml
chapters/ch7-error-handling/: Makefile  README.md  api_gateway.py  docker-compose.yml  logging_setup.py  order_service.py  pyproject.toml
chapters/ch8-otel-collector/: Makefile  README.md  api_gateway.py  logging_setup.py  order_service.py  pyproject.toml
chapters/ch8-otel-collector/mvp/: docker-compose.yml  otel-collector-config.yaml  prometheus.yml
chapters/ch8-otel-collector/production/: docker-compose.yml  otel-collector-config.yaml  prometheus.yml
chapters/ch9-sampling-pii/: Makefile  README.md  api_gateway.py  docker-compose.yml  logging_setup.py  order_service.py  otel-collector-config.yaml  prometheus.yml  pyproject.toml
